--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:               My digital garden
+title:               brozena.net
 include:             ['_pages']
 exclude:             ['_includes/notes_graph.json']
 # You may need to change the base URL depending on your deploy configuration.
@@ -10,7 +10,7 @@ use_html_extension:  false
 
 # Set to `true` to open non-internal links in new tabs, or
 # set to `false` to open non-internal links in current tab.
-open_external_links_in_new_tab: true
+open_external_links_in_new_tab: false
 
 # Set to `true` to replace tweet URLs with Twitter embeds.
 # Note that doing so will negatively the reader's privacy
@@ -21,6 +21,7 @@ permalink:           pretty
 relative_permalinks: false
 
 plugins:
+  - jekyll-paginate
   - jekyll-last-modified-at
 
 sass:
@@ -30,7 +31,10 @@ sass:
 collections:
   notes:
     output: true
-    permalink: /:slug
+    permalink: /notes/:slug
+  nobody-falls-halfway:
+    output: true
+    permalink: /nobody-falls-halfway/:path/
 
 defaults:
   - scope:
