--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -29,7 +29,7 @@ concurrency:
 jobs:
   # Build job
   build:
-    runs-on: ubuntu24/20250922.53
+    runs-on: ubuntu:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
