--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:               brozena.net
+title:               'Jeff Brozena'
 include:             ['_pages']
 exclude:             ['_includes/notes_graph.json']
 # You may need to change the base URL depending on your deploy configuration.
