--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:               'Jeff Brozena'
 include:             ['_pages']
-exclude:             ['_includes/notes_graph.json']
+exclude:             ['_includes/notes_graph.json', '_notes/templates/litnote.md']
 # You may need to change the base URL depending on your deploy configuration.
 baseurl:             ''
 
@@ -21,6 +21,7 @@ permalink:           pretty
 relative_permalinks: false
 
 plugins:
+  - jekyll-wikirefs
   - jekyll-paginate
   - jekyll-last-modified-at
 
@@ -45,3 +46,24 @@ defaults:
       path: "_notes/**/*.md"
     values:
       layout: "note"
+
+wikilinks:
+  attributes:
+    enabled: true
+  case:
+    'lower case'
+  css:
+    exclude: []
+    name:
+      typed: 'typed'
+      wiki: 'notes'
+      web: 'web-link'
+      invalid_wiki: 'invalid-wiki-link'
+      embed_container: 'embed-container'
+      embed_title: 'embed-title'
+      embed_content: 'embed-content'
+      embed_link: 'embed-wiki-link'
+      embed_image_container: 'embed-image-container'
+      embed_image: 'embed-image'
+  enabled: true
+  exclude: []
